Complete overlay text center alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ body {
 .slider-overlay {
     position: absolute;
     top: 50%;
-    left: 40%;
+    left: 43%;
     transform: translate(-50%, -50%);
     z-index: 5;
     animation: slideInDown 1s ease-out;
